@@ -99,6 +99,9 @@ password = CHANGEME
 
 
 [/settings/ExporterExporter/server]
+; ExporterExporterServer - Enable prometheus exporter_exporter server. (overrides the global option from the /modules section if uncommented)
+;ExporterExporterServer = disabled
+
 ; port - Port to use for exporter_exporter.
 port = ${/settings/WEB/server/port}
 
@@ -118,6 +121,9 @@ default module =
 
 
 ;[/settings/ManagedExporter/example]
+; ManagedExporterServer - Enable managed custom prometheus exporter. (overrides the global option from the /modules section if uncommented)
+;ManagedExporterServer = disabled
+
 ; agent path - sets path to prometheus-exporter binary
 ;agent path = ${shared-path}/prometheus/custom_exporter.exe
 
@@ -150,6 +156,9 @@ default module =
 
 
 [/settings/NRPE/server]
+; enable the NRPE server. (overrides the global option from the /modules section if uncommented)
+;NRPEServer = disabled
+
 ; port - Port to use for NRPE.
 port = 5666
 
@@ -164,6 +173,9 @@ allow nasty characters = false
 
 
 [/settings/NodeExporter/server]
+; NodeExporterServer - Enable prometheus linux node exporter. (overrides the global option from the /modules section if uncommented)
+;NodeExporterServer = disabled
+
 ; agent path - sets path to node-exporter binary
 agent path = /usr/lib/snclient/node_exporter
 
@@ -193,6 +205,9 @@ kill orphaned = enabled
 
 
 [/settings/Prometheus/server]
+; PrometheusServer - Enable /metrics HTTP server for the agent itself. (overrides the global option from the /modules section if uncommented)
+;PrometheusServer = disabled
+
 ; port - Port to use for WEB server.
 port = 9999
 
@@ -204,6 +219,9 @@ use ssl = true
 
 ; Web server - Section for http REST service
 [/settings/WEB/server]
+; WEBServer - Enable HTTP REST API requests via check_nsc_web. (overrides the global option from the /modules section if uncommented)
+;WEBServer = enabled
+
 ; use ssl - This option controls if SSL will be enabled.
 use ssl = true
 
@@ -218,6 +236,9 @@ allow nasty characters = false
 
 
 [/settings/WEBAdmin/server]
+; WEBAdminServer - Enable HTTP REST API requests for administrative tasks. (overrides the global option from the /modules section if uncommented)
+;WEBAdminServer = disabled
+
 ; port - Port to use for the admin rest api.
 port = ${/settings/WEB/server/port}
 
@@ -233,6 +254,9 @@ password = CHANGEME
 
 
 [/settings/WindowsExporter/server]
+; WindowsExporterServer - Enable prometheus windows exporter. (overrides the global option from the /modules section if uncommented)
+;WindowsExporterServer = disabled
+
 ; agent path - sets path to node-exporter binary
 agent path = ${shared-path}/exporter/windows_exporter.exe
 
