@@ -6,6 +6,7 @@ next:
          - remove pipes from unknown macros in final output
          - only proxy /metrics instead of * for managed exporter
          - add option `url match` for managed exporter to configure which urls should be proxied
+         - add support for enable modules from the module configuration instead of the modules section
          - fix crash in check_pdh
 
 0.34     Wed May 28 13:56:57 CEST 2025
